--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: ADA Template Website
-description: A template website for ADA
+title: Global Brews, Local Views
+description: Analyzing Cross-Country Beer Preferences and Challenging Reviewer Bias
 show_downloads: True
 navigation:
   - title: Home
